# SpinNSlot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.nginx-proxy.yml  docker-compose.traefik.yml  docker-compose.yml  gunicorn_config.py  podman-quadlets  pyproject.toml
nginx/: nginx.conf
src/: README.md  pyproject.toml
src/config/: settings.py  urls.py
src/web/: admin.py  apps.py  cache.py  context_processors.py  exceptions.py  models.py  permissions.py  signals.py  tasks.py  telegram_messages.py  urls.py  utils.py  validators.py  views.py
src/web/admin/: admin.py  forms.py
src/web/common/: ratelimit_middelware.py
src/web/migrations/: 0001_initial.py  0002_customers_working_hours_end_and_more.py  0003_tournament_tournamentregistration_and_more.py  0004_timeslot_is_booked_tournament_is_canceled_and_more.py  0005_alter_tournament_registration_deadline.py  0006_userslot_reason.py  0007_customers_user.py  0008_tournament_is_finished.py  0009_tournament_is_training.py  0010_customers_base_description_tournament_and_more.py  0011_alter_itemslot_options_alter_timeslot_options.py  0012_auto_20250315_2316.py  0013_customuser_vk_id.py  0014_alter_customuser_avatar_url.py  0015_customuser_phone.py
src/web/static/: manifest.json  robots.txt
src/web/templates/: base.html  bootstrap.html  daily_schedule.html  error.html  footer.html  header.html  index.html  live.html  telegram_login.html  tournament_detail.html  tournament_list.html  weekly_schedule.html
src/web/templatetags/: custom_filters.py
src/web/views/: __init__.py  forms.py  live.py  telegram_auth.py  user.py  views.py  vk_auth.py
(+8 files in other folders)
